Add preview option to java command